--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <div class="command-area">
         <div>
             <div>
-                右に<input id="right-steps" type="number" />歩進む
+                右に<input id="right-steps" type="number" min="0" />歩進む
                 <button onclick="stepMultipleRight()">実行</button>
             </div>
             <div>
-                下に<input id="down-steps" type="number" />歩進む
+                下に<input id="down-steps" type="number" min="0" />歩進む
                 <button onclick="stepMultipleDown()">実行</button>
             </div>
         </div>
